--- a/index.html
+++ b/index.html
@@ -43,7 +43,14 @@
         justify-content: center;
         align-items: center;
         z-index: 9999;
+        animation: fadeIn 2s ease-in-out;
       }
+
+      @keyframes fadeIn {
+        from { opacity: 0; }
+        to { opacity: 1; }
+      }
+
       #initial-loader img {
         width: 50%;
         max-width: 200px;
